deploy/monitor/grafana/6-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: monitoring
  labels:
    app: grafana
spec:
  type: ClusterIP
  ports:
  - name: ui
    port: 3000
    protocol: TCP
  selector:
    app: grafana
  type: LoadBalancer
